# AI-Rosetta-Stone-Engine

./: DELIVERABLES_SUMMARY.md  README.md  compliance_auditor.py  dashboard_app.py  demo_compliance_report.json  demo_extracted_rules.json  demo_knowledge_base_builder.py  demo_rosetta_stone.py  knowledge_base_builder.py  library_recommendations.md  neuro_symbolic_bridge.py  neuro_symbolic_survey.md  requirements.txt  simplified_demo.py  test_compliance_auditor.py
ai-rosetta-stone/: README.md  compliance_auditor.py  compliance_auditor_enhanced_demo.py  knowledge_base_builder.py
ai-rosetta-stone/rosetta_stone/: __init__.py
ai-rosetta-stone/rosetta_stone/bridge/: __init__.py
ai-rosetta-stone/rosetta_stone/knowledge_base/: __init__.py  builder.py  ontology.py  query.py
ai-rosetta-stone/rosetta_stone/reporting/: generator.py
rosetta_stone/: .gitignore  LICENSE  pyproject.toml  requirements.txt  setup.py
rosetta_stone/examples/: basic_usage.py
rosetta_stone/rosetta_stone/: cli.py
rosetta_stone/rosetta_stone/bridge/: analyzer.py  converter.py  extractor.py
rosetta_stone/rosetta_stone/mapping/: __init__.py  engine.py
rosetta_stone/rosetta_stone/reporting/: __init__.py
